# deepteam

./: .deepeval_telemetry.txt  .gitignore  README.md  a.py  ai_safety_paradox_experiment.py  analysis_results.csv  b.py  bb.py  custom_attack.py  custom_red_team.py  examples.py  llm_framework_comparison.py  prompt.py  prompt2.py  pyproject.toml  red_team.py  t.py  tes.py  test_guardrails2.py  test_metrics.py  test_roleplay.py  test_roleplay_replay.py  vv.py
.github/workflows/: cd.yml  ci.yml  install_package.yaml
deepteam/: __init__.py  red_team.py  telemetry.py
deepteam-results-custom/: 20250525_133605.json  20250525_144754.json  20250525_152221.json
deepteam/attack_simulator/: __init__.py  api.py  attack_simulator.py  template.py
deepteam/attacks/: __init__.py
deepteam/cli/: config.py  main.py  model_callback.py
deepteam/frameworks/: __init__.py  frameworks.py  utils.py
deepteam/guardrails/: README.md  __init__.py  api.py  base_guard.py  guardrails.py
deepteam/metrics/: __init__.py  base_red_teaming_metric.py
deepteam/red_teamer/: red_teamer.py  risk_assessment.py
deepteam/risks/: risks.py
deepteam/vulnerabilities/: __init__.py  types.py
docs/: .deepeval  docusaurus.config.js  sidebarGuides.js  sidebars.js
docs/blog/: ai-safety-paradox.md  authors.yml  breaking_gemini.md  bypassing-claude.md  claude-fortress-analysis.md  multi-turn-jailbreaking.md  placeholder.md  shakespeare-claude-jailbreak.md
docs/docs/: getting-started.mdx  guardrails-cybersecurity-guard.mdx  guardrails-hallucination-guard.mdx  guardrails-illegal-guard.mdx  guardrails-introduction.mdx  guardrails-privacy-guard.mdx  guardrails-prompt-injection-guard.mdx  guardrails-topical-guard.mdx  guardrails-toxicity-guard.mdx  red-teaming-adversarial-attacks-base64-encoding.mdx  red-teaming-adversarial-attacks-crescendo-jailbreaking.mdx  red-teaming-adversarial-attacks-gray-box-attack.mdx  red-teaming-adversarial-attacks-leetspeak.mdx  red-teaming-adversarial-attacks-linear-jailbreaking.mdx  red-teaming-adversarial-attacks-math-problem.mdx  red-teaming-adversarial-attacks-multilingual.mdx  red-teaming-adversarial-attacks-prompt-injection.mdx  red-teaming-adversarial-attacks-roleplay-replay.mdx  red-teaming-adversarial-attacks-roleplay.mdx  red-teaming-adversarial-attacks-rot13-encoding.mdx  red-teaming-adversarial-attacks-tree-jailbreaking.mdx  red-teaming-adversarial-attacks.mdx  red-teaming-agentic-attacks-agent-goal-hijacking.mdx  (+65 more)
examples/: example_config.yaml  sample.yaml
plots/: README_vulnerability_examples.md  generate_few_shot_data.py  plot1_results.py  plot2.py  plot2_results.py  plot_1.py  vulnerability_examples.json  vulnerability_specific_few_shot_results.json
test/: 20250314_204644.json  20250314_204646.json  20250314_210615.json  20250314_210617.json  20250314_210737.json  20250314_210738.json  20250314_210820.json  20250314_210821.json  20250314_210937.json  20250314_210939.json
tests/: test_agent.py  test_all_guardrails.py  test_bad_likert_judge_red_team.py  test_callback.py  test_cli_config.py  test_cli_yaml.py  test_custom_vulnerability.py  test_deepteam.py  test_example_config.py  test_frameworks.py  test_guardrails2.py  test_input_output_guards.py  test_metrics.py  test_model_callback.py  test_roleplay.py  test_sample_rates.py  test_sequential_break_red_team.py
(+496 files in other folders)
