[project]
name = "deepteam"
version = "0.1.0"
description = "The LLM Red Teaming Framework"
authors = [
    { name = "Jeffrey Ip", email = "jeffreyip@confident-ai.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "deepeval",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "tabulate>=0.9.0",
    "openai",
    "aiohttp",
    "grpcio==1.67.1",
]

[project.urls]
Repository = "https://github.com/confident-ai/deepteam"
Documentation = "https://docs.trydeepteam.com"
Issues = "https://github.com/confident-ai/deepteam/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
build = [
    "twine>=5.1.1",
]

[project.scripts]
deepteam = 'deepteam.cli.main:app'

[tool.black]
line-length = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-m 'not skip_test'"
markers = [
    "skip_test: skip the test",
]
